tests/miniJava/neg/006454_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while String ( 0 ) { } } }
